ecc2025: update  lab.4

--- a/EllipticCurves2025/lab04/lab04.tex
+++ b/EllipticCurves2025/lab04/lab04.tex
@@ -110,7 +110,7 @@
         \normalsize
         \section*{Требования к сдаче}
         \begin{itemize}
-            \item Функция должна быть оптимизирована так, чтобы выполняться на тестах за разумное время (около минуты).
+            \item Функция должна быть оптимизирована так, чтобы выполняться на тестах за разумное время (около 5 минут).
             \item Исходный код должен содержать комментарии к каждой из функций с описанием входных и выходных параметров
             \item Лабораторную следует выполнять модификацией файла с тестами, заменяя строку
             
