ecc2025: fix mistakes

--- a/EllipticCurves2025/lecture11_slides/lecture11_slides.tex
+++ b/EllipticCurves2025/lecture11_slides/lecture11_slides.tex
@@ -78,8 +78,8 @@
 		%	\text{\UserA} & & \text{\UserB} \\
 		\text{\UserA} &\arrow{ld}[swap]{a} x  \arrow{rd}{b} & \text{\UserB} \\
 		a * x &
-		\arrow[yshift=-0.7ex]{r}{b * x}
-		\arrow[yshift=0.7ex]{l}{a * x}
+		\arrow[yshift=-0.7ex]{r}{a * x}
+		\arrow[yshift=0.7ex]{l}{b * x}
 		& b * x\\
 	\end{tikzcd}
 	\]
@@ -100,8 +100,8 @@
 				%	\text{\UserA} & & \text{\UserB} \\
 				\text{\UserA} &\arrow{ld}[swap]{a} x  \arrow{rd}{b} & \text{\UserB} \\
 				a * x &
-				\arrow[yshift=-0.7ex]{r}{b * x}
-				\arrow[yshift=0.7ex]{l}{a * x}
+				\arrow[yshift=-0.7ex]{r}{a * x}
+				\arrow[yshift=0.7ex]{l}{b * x}
 				& b * x\\
 			\end{tikzcd}
 			\]
@@ -140,8 +140,8 @@
 		%	\text{\UserA} & & \text{\UserB} \\
 		\text{\UserA} &\arrow{ld}[swap]{a} x  \arrow{rd}{b} & \text{\UserB} \\
 		a * x &
-		\arrow[yshift=-0.7ex]{r}{b * x}
-		\arrow[yshift=0.7ex]{l}{a * x}
+		\arrow[yshift=-0.7ex]{r}{a * x}
+		\arrow[yshift=0.7ex]{l}{b * x}
 		& b * x\\
 	\end{tikzcd}
 	\]
