ecc2025: lecture 12, draft

--- a/EllipticCurves2025/beamerthemeec2020.sty
+++ b/EllipticCurves2025/beamerthemeec2020.sty
@@ -153,5 +153,8 @@ BoldFont  = *-Solid-900
 \newcommand{\ProofEnd}{ \structure{$\triangleright$} }
 \newcommand{\MyImplies}{ \structure{$\implies$} }
 
+\newcommand{\UserA}{{\structure{{\Large\faUserSecret}}}}
+\newcommand{\UserB}{{\structure{{\Large\faCat}}}}
+
 \uselanguage{russian}
 \languagepath{russian}
