--- a/EllipticCurves2025/lecture10_slides/lecture10_slides.tex
+++ b/EllipticCurves2025/lecture10_slides/lecture10_slides.tex
@@ -268,7 +268,7 @@ b' = b - 7 \sum_{Q \in G \setminus \{\mathcal{O}\}} \left(
 Суперсингулярные кривые:
 \begin{itemize}
 	\item наилучший алгоритм -- поиск на основе парадокса дней рождений
-	\item сложность: $\mathcal{O}(p^6)$ (квант. алг.) и $\mathcal{O}(p^4)$ (класс. алг.)
+	\item сложность: $\mathcal{O}(\sqrt[6]{p})$ (квант. алг.) и $\mathcal{O}(\sqrt[4]{p})$ (класс. алг.)
 \end{itemize}
 
 \vspace{0.5em}
